fix: "full canvas" mobile menu overlapping with WC product tabs issue has been fixed

--- a/assets/scss/components/hfg/frontend/layout/_mobile_sidebar.scss
+++ b/assets/scss/components/hfg/frontend/layout/_mobile_sidebar.scss
@@ -6,8 +6,7 @@
 	max-width: 100%;
 	top: 0;
 	z-index: $menu_sidebar_active_z_index;
-	visibility: hidden;
-	display: flex;
+	display: none;
 	transition: all 0.3s cubic-bezier(0.79, 0.14, 0.15, 0.86);
 	height: 100vh;
 
@@ -143,7 +142,7 @@
 .is-menu-sidebar {
 
 	.header-menu-sidebar {
-		visibility: visible;
+		display: flex;
 	}
 
 	&.menu_sidebar_slide_left {
